# agentodyssey

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  agentodyssey.py  eval.py  getting_started.md  pyproject.toml  requirements.txt  utils.py
agents/: fake_llm_agent.py  human_agent.py  llm_agent_config.py  long_context_agent.py  no_memory_agent.py  random_agent.py  replay_agent.py  wait_agent.py
agents/fixed_size/: fixed_size_memory_agent_config.py  mem1_agent.py  short_term_memory_agent.py
agents/latent/: latent_agent_config.py  memoryllm_agent.py  modeling_memoryllm.py  modeling_mplus.py  mplus_agent.py
agents/parametric/: lora_sft_agent.py  param_agent_config.py
agents/rag/: mem0_rag_agent.py  rag_agent_config.py  raptor_rag_agent.py  vanilla_rag_agent.py  voyager_agent.py
agents/rag/raptor/: EmbeddingModels.py  QAModels.py  RetrievalAugmentation.py  cluster_utils.py  tree_builder.py
assets/agents_configs/: single_agent.json  three_agents.json
games/base/: agent.py  env.py  rule.py  world.py
providers/: azure_api.py  azure_openai_api.py  claude_api.py  gemini_api.py  huggingface.py  openai_api.py  vllm.py
scripts/: run_diagnostic_eval.sh  run_multi_agent.sh  run_single_agent.sh
tools/: diagnostic_eval.py  generate_cumulative_config.py  generate_episodic_memory_qa.py  generate_world_knowledge_qa.py  logger.py
tools/generators/: entity_generator.py  quest_generator.py  rule_generator.py
tools/visualizer/: clean_visualizer_icons.py  dep_graph.py  generate_assets.py  log.py  main.html  main.py  preloaded_data.js  world_graph.py
(+6 files in other folders)
